2011-11-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/errorhandler.hxx, src/notify-listen.cxx:
 - Added missing #include <functional>
 - Fixes #241.  Thanks Sam Kapilivsky.
2011-11-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/vc-libpqxx.mak.template:
 - Use debug library where appropriate, as per #238 (thanks Sam Kapilivksy).
 win32/vc-test-unit.mak.template:
 - Build test/unit, not test, also as per #238
2011-11-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt:
 - Overhaul by Sam Kapilivsky.  Thanks once again!
2011-11-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test_main.hxx:
 - Workaround in create_pqxxevents for older backends without multi-insert.
2011-11-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh, win32/vc-test-unit.mak.template:
 - Support building of new-style unit tests on Visual C++.
 - As per patch in #238; thanks Sam Kapilivsky.
 win32/common-sample, win32/vc-libpqxx.mak.template,
 win32/vc-test.mak.template:
 - Easier Visual C++ setup.
 - As per patch in #238; thanks Sam Kapilivsky.
2011-11-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
 - Removed reference to tablestreams.
2011-11-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/tablereader.hxx, include/pqxx/tablestream.hxx,
 include/pqxx/tablewriter.hxx:
 - Deprecated tablestream classes (tablereader, tablewriter).
 - Fixes #199, #223.
 - Thanks to cuboci and Andreas Freund for pointing out the problems.
 include/pqxx/transaction_base.hxx, include/pqxx/transactor.hxx,
 include/pqxx/util.hxx, test/test000.cxx, test/test007.cxx, test/test010.cxx,
 test/test013.cxx, test/test018.cxx, test/test020.cxx, test/test026.cxx,
 test/test029.cxx, test/test032.cxx, test/test037.cxx, test/test039.cxx,
 test/test066.cxx, test/test075.cxx, test/test082.cxx, test/test083.cxx,
 test/test088.cxx, test/test_helpers.hxx, test/test_main.hxx:
 - Create pqxxevents only on demand, locally per test (and as temporary).
 - Move test coverage from deleted tests to remaining ones.